InsuranceOrg/force-app/main/default/objects/Job__c/fields/Claims__c.field-meta.xml
<CustomField>
    <fullName>Claims__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>