InsuranceOrg/force-app/main/default/objects/Job__c/fields/Jobs_Name__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Name__c</fullName>
    <label>Jobs Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>